--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello Github!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>FlashDesignory</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="index.js"></script>
+  </head>
+  <body>
+    <div>Hello World 👋</div>
+  </body>
+</html>
