--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>FlashDesignory</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script type="module" src="index.js"></script>
   </head>
   <body>
-    <div>Hello World 👋</div>
+    <div id="card"></div>
   </body>
 </html>
+
