--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashDesignory</title>
     <link rel="icon" type="image/ico" href="https://flashdesignory.github.io/favicon.ico"/>
+    <link rel="preload" as="image" href="src/assets/avatar.jpg">
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="index.js"></script>
   </head>
