--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashDesignory</title>
     <link rel="icon" type="image/ico" href="https://flashdesignory.github.io/favicon.ico"/>
+    
     <link rel="preload" as="image" href="src/assets/avatar.jpg">
+
+    <link rel="preload" href="src/components/atoms/image/image.css" as="style">
+    <link rel="preload" href="src/components/atoms/text/text.css" as="style">
+    <link rel="preload" href="src/components/molecules/avatar/avatar.css" as="style">
+    <link rel="preload" href="src/components/molecules/business-card/business-card.css" as="style">
+
+    <link rel="preload" href="src/components/atoms/image/image.js" as="script">
+    <link rel="preload" href="src/components/atoms/text/text.js" as="script">
+    <link rel="preload" href="src/components/molecules/avatar/avatar.js" as="script">
+    <link rel="preload" href="src/components/molecules/business-card/business-card.js" as="script">
+
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="index.js"></script>
   </head>
@@ -12,4 +24,3 @@
     <div id="card"></div>
   </body>
 </html>
-
