--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FlashDesignory: Thorsten Kober">
     <title>FlashDesignory</title>
     <link rel="icon" type="image/ico" href="https://flashdesignory.github.io/favicon.ico"/>
     
