--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="preload" href="src/components/molecules/avatar/avatar.css" as="style">
     <link rel="preload" href="src/components/molecules/business-card/business-card.css" as="style">
 
-    <link rel="preload" href="src/components/atoms/image/image.js" as="script">
-    <link rel="preload" href="src/components/atoms/text/text.js" as="script">
-    <link rel="preload" href="src/components/molecules/avatar/avatar.js" as="script">
-    <link rel="preload" href="src/components/molecules/business-card/business-card.js" as="script">
+    <link rel="preload" href="src/components/atoms/image/image.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="src/components/atoms/text/text.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="src/components/molecules/avatar/avatar.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="src/components/molecules/business-card/business-card.js" as="script" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="index.js"></script>
