--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preload" href="src/components/molecules/business-card/business-card.js" as="script" crossorigin="anonymous">
     
     <link rel="preload" href="src/assets/linkedin.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/assets/locationi.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="src/assets/location.js" as="script" crossorigin="anonymous">
     <link rel="preload" href="src/assets/work.js" as="script" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles.css" />
