--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     
     <link rel="preload" as="image" href="src/assets/avatar.jpg">
 
+    <link rel="preload" href=styles.css" as="style">
     <link rel="preload" href="src/components/atoms/image/image.css" as="style">
     <link rel="preload" href="src/components/atoms/link/link.css" as="style">
     <link rel="preload" href="src/components/atoms/text/text.css" as="style">
     <link rel="preload" href="src/components/molecules/avatar/avatar.css" as="style">
     <link rel="preload" href="src/components/molecules/business-card/business-card.css" as="style">
 
-    <link rel="preload" href="src/components/atoms/image/image.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="index.js" as="script" crossorigin="anonymous">
+    <link rel="preload" href="src/components/atoms/image/image.js" as="script" crossorigin="anonymous">                                                                                                 
     <link rel="preload" href="src/components/atoms/link/link.js" as="script" crossorigin="anonymous">
     <link rel="preload" href="src/components/atoms/text/text.js" as="script" crossorigin="anonymous">
     <link rel="preload" href="src/components/molecules/avatar/avatar.js" as="script" crossorigin="anonymous">
