--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link rel="preload" as="image" href="src/assets/avatar.jpg">
 
-    <link rel="preload" href=styles.css" as="style">
+    <link rel="preload" href="styles.css" as="style">
     <link rel="preload" href="src/components/atoms/image/image.css" as="style">
     <link rel="preload" href="src/components/atoms/link/link.css" as="style">
     <link rel="preload" href="src/components/atoms/text/text.css" as="style">
