--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preload" href="src/components/molecules/avatar/avatar.css" as="style">
     <link rel="preload" href="src/components/molecules/business-card/business-card.css" as="style">
 
-    <link rel="preload" href="index.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="index.js" as="script" crossorigin="anonymous">
     <link rel="preload" href="src/components/atoms/image/image.js" as="script" crossorigin="anonymous">                                                                                                 
     <link rel="preload" href="src/components/atoms/link/link.js" as="script" crossorigin="anonymous">
     <link rel="preload" href="src/components/atoms/text/text.js" as="script" crossorigin="anonymous">
