--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="preload" href="src/components/molecules/business-card/business-card.css" as="style">
 
     <link rel="modulepreload" href="index.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/components/atoms/image/image.js" as="script" crossorigin="anonymous">                                                                                                 
-    <link rel="preload" href="src/components/atoms/link/link.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/components/atoms/text/text.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/components/molecules/avatar/avatar.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/components/molecules/business-card/business-card.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/components/atoms/image/image.js" as="script" crossorigin="anonymous">                                                                                                 
+    <link rel="modulepreload" href="src/components/atoms/link/link.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/components/atoms/text/text.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/components/molecules/avatar/avatar.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/components/molecules/business-card/business-card.js" as="script" crossorigin="anonymous">
     
     <link rel="preload" href="src/assets/linkedin.js" as="script" crossorigin="anonymous">
     <link rel="preload" href="src/assets/location.js" as="script" crossorigin="anonymous">
