--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <link rel="modulepreload" href="src/components/molecules/avatar/avatar.js" as="script" crossorigin="anonymous">
     <link rel="modulepreload" href="src/components/molecules/business-card/business-card.js" as="script" crossorigin="anonymous">
     
-    <link rel="preload" href="src/assets/linkedin.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/assets/location.js" as="script" crossorigin="anonymous">
-    <link rel="preload" href="src/assets/work.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/assets/linkedin.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/assets/location.js" as="script" crossorigin="anonymous">
+    <link rel="modulepreload" href="src/assets/work.js" as="script" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles.css" />
     <script type="module" src="index.js"></script>
