--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     <link rel="modulepreload" href="src/assets/location.js" as="script" crossorigin="anonymous">
     <link rel="modulepreload" href="src/assets/work.js" as="script" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="styles.css" >
+    <link rel="stylesheet" href="src/components/atoms/image/image.css">
+    <link rel="stylesheet" href="src/components/atoms/link/link.css">
+    <link rel="stylesheet" href="src/components/atoms/text/text.css">
+    <link rel="stylesheet" href="src/components/molecules/avatar/avatar.css">
+    <link rel="stylesheet" href="src/components/molecules/business-card/business-card.css">
     <script type="module" src="index.js"></script>
   </head>
   <body>
